Closed Bug 1508117 Opened 6 years ago Closed 6 years ago

WebRender breaks extensions' pop-up panels

Categories

(Core :: Graphics: WebRender, defect, P2)

Unspecified
All
defect

Tracking

()

VERIFIED FIXED
mozilla65
Tracking Status
firefox-esr60 --- unaffected
firefox63 --- unaffected
firefox64 --- unaffected
firefox65 --- fixed

People

(Reporter: tgnff242, Assigned: sotaro)

References

Details

(Keywords: nightly-community, regression)

Attachments

(1 file)

User Agent: Mozilla/5.0 (X11; Linux x86_64; rv:65.0) Gecko/20100101 Firefox/65.0

Steps to reproduce:

1. Create a new profile (not sure if Linux is necessary).
2. Set gfx.webrender.all to true and restart the browser.
3. Install an extension which adds an icon that triggers a pop-up panel (eg. Containers [1]).
4. Try to interact with the pop-up panel.

[1]: https://addons.mozilla.org/en-US/firefox/addon/multi-account-containers


Actual results:

Hovering over the elements does nothing. Clicking on them activates them, but it's only visible after you close and open again the panel, which breaks completely extensions like translators that need to update the panel with the translated word [2].

[2]: https://addons.mozilla.org/en-US/firefox/addon/simple-translate


Expected results:

It should work as good as when WR is disabled.

Bisections points to Bug 1506767.

mozregression log:
 8:12.67 INFO: No more inbound revisions, bisection finished.
 8:12.67 INFO: Last good revision: 241738774bb1b1f998770af0e0dd82c6ba8de36d
 8:12.67 INFO: First bad revision: 896d672ed0abaece6317543d2d14783044c2709a
 8:12.67 INFO: Pushlog:
https://hg.mozilla.org/integration/mozilla-inbound/pushloghtml?fromchange=241738774bb1b1f998770af0e0dd82c6ba8de36d&tochange=896d672ed0abaece6317543d2d14783044c2709a
Blocks: 1506767
Has Regression Range: --- → yes
Has STR: --- → yes
Assignee: nobody → sotaro.ikeda.g
Status: UNCONFIRMED → ASSIGNED
Ever confirmed: true
Severity: normal → major
OS: Unspecified → All
Priority: -- → P2
GTX1060, KDE, Debian Testing
Same regression range: If you drag a tab out of the window, the new window's web content is often just blank. Same when dragging it back.
Sorry, it was caused by my silly mistake :(
Attachment #9025975 - Flags: review?(matt.woodrow)
Attachment #9025975 - Flags: review?(matt.woodrow) → review+
Pushed by sikeda@mozilla.com:
https://hg.mozilla.org/integration/mozilla-inbound/rev/20c99b0e8e4e
Fix mAsyncImageManager->AddPipeline() calls in WebRenderBridgeParent::UpdateWebRender() r=mattwoodrow
https://hg.mozilla.org/mozilla-central/rev/20c99b0e8e4e
Status: ASSIGNED → RESOLVED
Closed: 6 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla65
I verified the fix on Nightly with Build ID 20181119100448.
Status: RESOLVED → VERIFIED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: